update solr.in.sh from cloud with updated gc